# merkraum

./: .dockerignore  .env.example  AGENT_SPEC.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  demo_belief_lifecycle.py  docker-compose.yml  jwt_auth.py  merkraum_acl.py  merkraum_api.py  merkraum_backend.py  merkraum_dreaming.py  merkraum_llm.py  merkraum_mcp_server.py  merkraum_pii.py  pyproject.toml  requirements.txt  server.json  skill.md  start_api.sh  test_integration.py  test_pii.py  test_security_review.py  test_unit.py
.github/: PULL_REQUEST_TEMPLATE.md
docs/: architecture.md  belief-tracking.md  benchmark.md  compliance-guide.md  deployment_setup.md  directory-listings.md  security-public-readiness.md  security-review-2026-03.md
scripts/: backfill_qdrant.py
